cambio de comando en package.json > deploy: de build a dist por el tipo de carpeta usada por Vite

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 
     "homepage": "http://diegorus92.github.io/rand-cats-react",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist" 
   },
   "dependencies": {
     "cataas-api": "^1.1.2",
