--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "http://diegorus92.github.io/rand-cats-react",
+  
   "name": "test1",
   "private": true,
   "version": "0.0.0",
@@ -9,7 +11,6 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
 
-    "homepage": "http://diegorus92.github.io/rand-cats-react",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist" 
   },
@@ -26,6 +27,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "gh-pages": "^6.1.1"
   }
 }
